2002-03-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03088] gopher broken 
		(Re: Bug#137287: w3m: segfault on gopher://xxxx.xxx URI)
	* file.c (form_max): initial value should be -1
	* file.c (loadGopherDir): </A>

2002-03-08  YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>

	* [w3m-dev 03087] vi +1 emptyfile
	* etc.c (myEditor): line > 1

2002-03-06  Christian Weisgerber <w3m-dev-en@mips.inka.de>

	* [w3m-dev-en 00699]
	* configure: define SETPGRP() instead of setpgrp()
	* etc.c (mySystem): use SETPGRP() instead of setpgrp()
	* image.c (openImgdisplay): ditto
	* search.c (open_migemo): ditto
	* url.c: revert changes by Dai Sato on 2002-02-01
		since stdio.h and config.h is included with this order
		in fm.h

2002-03-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: 0.3+cvs

2002-03-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.3
	* version.c.in: update
	* doc/README: version 0.3, release date
	* doc-jp/README: ditto
	* NEWS: update

2002-03-06  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03084] A temporary file remains when pipe + 'v'
	* proto.h (saveBufferDelNum): deleted
	* file.c (saveBufferDelNum): deleted
	* file.c (saveBuffer): saveBufferDelNum() renamed 
	* main.c (vwSrc): tmpfname() recorded as fileToDelete
			use saveBuffer() instead of saveBufferDelNum()

2002-03-04  Fumitoshi UKAI  <ukai@debian.or.jp>

	* doc-jp/MANUAL.html: add note about file:/cgi-bin
	* doc/MANUAL.html: ditto

2002-03-01  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03073] frame + image
	* file.c (loadGeneralFile): w3m_dump & ~DUMP_FRAME
	* file.c (loadImageBuffer): comment out if (frame_source)

2002-03-01  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03072] Proxy-Authorization (Re:  Re: https through proxy)
	* file.c (loadGeneralFile) delete Proxy-Authorization set here
	* fm.h (HR_FLAG_PROXY): added
	* main.c (MAIN): need "Basic " for proxy_auth_cookie
	* url.c (HTTPrequest): add seen_proxy_auth